--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "./index.d.ts"
   ],
   "scripts": {
+    "prepublish": "npm run compile",
+    "publish": "git push origin --tags && npm run changelog && git push origin",
     "build": "babel -d lib/ src/",
     "watch": "babel --watch -d lib/ src/",
     "mocha": "mocha --opts mocha.opts",
     "compile": "babel -d lib/ src/",
-    "coverage": "node_modules/.bin/nyc --reporter=lcov --reporter=text npm run mocha",
+    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha -- --opts mocha.opts",
     "test": "npm run mocha"
   },
   "author": "",
@@ -34,9 +36,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.1",
+    "coveralls": "^2.13.1",
     "eslint": "^4.4.1",
-    "mocha": "^3.5.0",
-    "nyc": "^11.1.0"
+    "istanbul": "^1.1.0-alpha.1",
+    "mocha": "^3.5.0"
   },
   "repository": {
     "type": "git",
