--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "feathers-hooks-validator",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.2",
+  "description": "This modules for the feathersjs framework.",
   "main": "lib/index.js",
   "types": [
     "./index.d.ts"
+  ],
+  "keywords": [
+    "feathers-plugin",
+    "feathers",
+    "validator",
+    "feathers-validator"
   ],
   "scripts": {
     "prepublish": "npm run compile",
@@ -17,17 +23,20 @@
     "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha -- --opts mocha.opts",
     "test": "npm run mocha"
   },
-  "author": "",
+  "author": {
+    "name": "Norton",
+    "email": "norton0395@gmail.com"
+  },
   "license": "ISC",
   "dependencies": {
-    "feathers": "^2.1.7",
     "feathers-errors": "^2.9.1",
-    "feathers-hooks": "^2.0.2",
     "indicative": "^3.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1"
   },
   "devDependencies": {
+    "feathers-hooks": "^2.0.2",
+    "feathers": "^2.1.7",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
