--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "license": "ISC",
   "dependencies": {
-    "feathers-errors": "^2.9.1",
+    "@feathersjs/errors": "^3.3.0",
     "indicative": "^3.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1"
